--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
     margin-left: auto;
     margin-right: auto;
 }
+body {
+    font-family: 'Montserrat';
+}
+
+/* header */
+
 header{
     padding-top: 64px;
     background-color: black;
@@ -17,7 +23,7 @@ header .container {
 
 .header-logo {
     color: var(--wei, #FFF);
-    font-family: Lato;
+    font-family: 'Lato';
     font-size: 32px;
     font-weight: 700;
     line-height: normal;
@@ -34,7 +40,6 @@ header .container {
 
 .header-link {
     color: #FFF;
-    font-family: Montserrat;
     font-size: 18px;
     font-weight: 700;
     line-height: normal;
@@ -42,9 +47,36 @@ header .container {
 
 .header-account {
     color: #FFF;
-    font-family: Montserrat;
     font-size: 17px;
     font-weight: 700;
     line-height: normal;
     margin-left: auto;
+}
+
+/* hero */
+
+.hero-suptitle {
+    font-size: 18px;
+font-weight: 800;
+line-height: normal;
+letter-spacing: 6px;
+text-transform: uppercase;
+}
+
+.hero-title {
+    font-family: 'Lato';
+    color: var(--wei, #FFF);
+font-size: 88px;
+font-style: normal;
+font-weight: 600;
+line-height: 100px;
+text-transform: capitalize;
+}
+
+.hero-text {
+    color: #FFF;
+    font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
 }
