--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,21 @@
     margin-left: auto;
     margin-right: auto;
 }
+
 body {
     font-family: 'Montserrat';
 }
 
 /* header */
 
-header{
+header {
     padding-top: 64px;
-    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
+
 header .container {
     display: flex;
     align-items: center;
@@ -29,7 +34,7 @@ header .container {
     line-height: normal;
     letter-spacing: 0.32px;
     text-transform: capitalize;
-    margin-right:631px;
+    margin-right: 631px;
 }
 
 .header-list {
@@ -55,28 +60,75 @@ header .container {
 
 /* hero */
 
+.hero {
+    background-image: url(../images/hero-bg.jpg);
+    padding-top: 287px;
+    padding-bottom: 1304px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    max-width: 1920px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.hero-box {
+    max-width: 955px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .hero-suptitle {
+    color: var(--accent, #FBD784);
     font-size: 18px;
-font-weight: 800;
-line-height: normal;
-letter-spacing: 6px;
-text-transform: uppercase;
+    font-weight: 800;
+    line-height: normal;
+    letter-spacing: 6px;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+    position: relative;
+    padding-left: 104px;
+}
+
+.hero-suptitle::after {
+    content: '';
+    display: block;
+    width: 72px;
+    height: 2px;
+    background-color: var(--accent, #FBD784);
+    position: absolute;
+    top: 33%;
+    left: 0;
 }
 
 .hero-title {
     font-family: 'Lato';
     color: var(--wei, #FFF);
-font-size: 88px;
-font-style: normal;
-font-weight: 600;
-line-height: 100px;
-text-transform: capitalize;
+    font-size: 88px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 100px;
+    text-transform: capitalize;
+    margin-bottom: 33px;
 }
 
 .hero-text {
     color: #FFF;
     font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    position: relative;
+    width: 135px;
+}
+
+.hero-text::after {
+    content: '';
+    display: block;
+    background-image: url(../images/arrow.png);
+    width: 16px;
+    height: 24px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
