--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-    width: 1790px;
+    max-width: 1790px;
     padding-left: 15px;
     padding-right: 15px;
     outline: solid red;
@@ -9,6 +9,7 @@
 
 body {
     font-family: 'Montserrat';
+    background: var(--bg, #0B1D26);
 }
 
 /* header */
@@ -90,7 +91,7 @@ header .container {
     padding-left: 104px;
 }
 
-.hero-suptitle::after {
+.line::after {
     content: '';
     display: block;
     width: 72px;
@@ -99,6 +100,11 @@ header .container {
     position: absolute;
     top: 33%;
     left: 0;
+}
+
+.line{
+    position: relative;
+
 }
 
 .hero-title {
@@ -122,6 +128,7 @@ header .container {
     width: 135px;
 }
 
+
 .hero-text::after {
     content: '';
     display: block;
@@ -132,3 +139,126 @@ header .container {
     top: 0;
     right: 0;
 }
+
+.articlas {
+    /* position: absolute;
+    bottom: 400px;
+    left: 50%;
+    transform: translate(-50%, 0); */
+    padding-bottom: 200px;
+}
+
+.articlas-title {
+    color: #FFF;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 27px;
+    width: 555px;
+}
+
+.articlas-text {
+    color: #FFF;
+    font-family: 'Lato';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px;
+    margin-top: 27px;
+    width: 632px;
+}
+
+.articlas-get {
+    margin-top: 27px;
+    color: var(--accent, #FBD784);
+    font-family: 'Lato';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    letter-spacing: 6px;
+    text-transform: uppercase;
+    padding-left: 104px;
+}
+
+.articlas-more {
+    margin-top: 27px;
+    color: var(--accent, #FBD784);
+    font-family: 'Lato';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    position: relative;
+    width: 127px;
+}
+
+.articlas-item {
+    display: flex;
+    outline: solid green;
+    margin-bottom: 200px;
+    gap: 114px;
+    max-width: 1462px;
+    margin-right: auto;
+    margin-left: auto;
+    align-items: center;
+    height: 720px;
+    
+
+
+
+}
+
+.articlas-box {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 150px;
+    background-repeat: no-repeat;
+    height: 100%;
+    background-position: 0 38px;
+
+    
+}
+
+.articlas-item:nth-child(1) .articlas-box {
+    background-image: url(../images/equipment-01.png);
+
+}
+
+.articlas-item:nth-child(2) .articlas-box {
+    background-image: url(../images/equipment-02.png);
+
+}
+
+.articlas-item:nth-child(3) .articlas-box {
+    background-image: url(../images/equipment-03.png);
+
+}
+
+.articlas-item:nth-child(even) {
+    flex-direction: row-reverse;
+    background-position: right center;
+}
+
+.articlas-img{
+    width: 566px;
+    height: 720px;
+}
+
+.articlas-more::after {
+    content: '';
+    display: block;
+    background-image: url(../images/arrow_downward_24px.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 32px;
+    height: 24px;
+    position: absolute;
+    top:15%;
+    right: 0;
+}
+
+
+
